[package]
name = "cake-autorate-rs"
version = "1.0.0-rc.13"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
socket2 = { version = "0.6.4", features = ["all"] }
tungstenite = { version = "0.29.0", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
webpki-roots = "0.26.11"

[[bin]]
name = "cake-autorated"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
